# sc_windows

./: .editorconfig  .gitignore  CLEANUP_REPORT_2025.md  Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_GUIDE.md  WECHAT_SCROLL_CAPTURE_REVERSE_ENGINEERING.md  ZED_GPUI_REFACTOR_STATUS.md  architecture_redesign.md  build.rs  cleanup_suggestions.md  package_final.bat  package_simple.bat  test.rs
.cargo/: config.toml
apps/sc_windows/: Cargo.toml  app.manifest  build.rs  resources.rc
apps/sc_windows/benches/: capture_bench.rs  rendering_bench.rs
apps/sc_windows/src/: lib.rs  main.rs
apps/sc_windows/tests/: drawing_tests.rs
benches/: capture_bench.rs  rendering_bench.rs
crates/sc_app/: Cargo.toml
crates/sc_app/src/: lib.rs  ocr.rs  selection.rs
crates/sc_drawing/: Cargo.toml
crates/sc_drawing/src/: element.rs  history.rs  interaction.rs  lib.rs  manager.rs  types.rs
crates/sc_drawing/src/windows/: cache.rs  context.rs  drawing_renderer.rs  ext.rs  mod.rs  renderable.rs  text.rs
crates/sc_drawing/src/windows/elements/: arrow.rs  circle.rs  common.rs  mod.rs  pen.rs  rectangle.rs  text.rs
crates/sc_drawing_host/: Cargo.toml
crates/sc_drawing_host/src/: constants.rs  interaction.rs  lib.rs  rendering.rs  text_editing.rs  tools.rs
crates/sc_highlight/: Cargo.toml
crates/sc_highlight/src/: auto_highlight.rs  lib.rs
crates/sc_host_protocol/: Cargo.toml
crates/sc_host_protocol/src/: lib.rs
crates/sc_host_windows/: Cargo.toml
crates/sc_host_windows/src/: app.rs  command_executor.rs  constants.rs  core_bridge.rs  error.rs  host_event.rs  lib.rs  run.rs  scroll_capture.rs
crates/sc_host_windows/src/screenshot/: mod.rs  selection.rs
crates/sc_host_windows/src/system/: mod.rs
crates/sc_ocr/: Cargo.toml
crates/sc_ocr/src/: engine.rs  lib.rs  types.rs
crates/sc_platform/: Cargo.toml
crates/sc_platform/src/: events.rs  host.rs  lib.rs  platform_api.rs  traits.rs
crates/sc_platform_windows/: Cargo.toml
crates/sc_platform_windows/src/: event_converter.rs  lib.rs  win32.rs  win_api.rs
crates/sc_platform_windows/src/windows/: app_runner.rs  bmp.rs  clipboard.rs  controls.rs  cursor.rs  d2d.rs  factory.rs  file_dialog.rs  gdi.rs  graphics_capture.rs  host_platform.rs  hotkey_manager.rs  hotkeys.rs  message_box.rs  mod.rs  resources.rs  system.rs  tray.rs  tray_manager.rs  window_event_converter.rs
crates/sc_rendering/: Cargo.toml
crates/sc_rendering/src/: dirty_rect.rs  layer_cache.rs  lib.rs  render_list.rs  types.rs
crates/sc_settings/: Cargo.toml
crates/sc_settings/src/: defaults.rs  lib.rs  manager.rs  settings.rs
crates/sc_ui/: Cargo.toml
crates/sc_ui/src/: lib.rs  preview_hit_test.rs  preview_layout.rs  selection_overlay.rs  theme.rs  toolbar.rs
crates/sc_ui_windows/: Cargo.toml
crates/sc_ui_windows/src/: constants.rs  cursor.rs  icon_assets.rs  lib.rs  scroll_preview.rs  settings.rs  svg.rs  svg_icons.rs  toolbar.rs
crates/sc_ui_windows/src/preview/: bmp.rs  drawing.rs  events.rs  hit_test.rs  layout.rs  mod.rs  renderer.rs  types.rs  window.rs
crates/sc_ui_windows/src/settings/: events.rs  hotkey_edit.rs  layout.rs  window.rs
paddleocr/: README.md
paddleocr/src/: lib.rs
src/: app.rs  command_executor.rs  constants.rs  d2d.rs  drawing.rs  error.rs  event_handler.rs  file_dialog.rs  input.rs  lib.rs  main.rs  main_improved.rs  message.rs  modern_settings.rs  native_modern_settings.rs  nwg_modern_settings.rs  nwg_settings.rs  ocr.rs  ocr_result_window.rs  preview_window.rs  settings.rs  simple_settings.rs  state.rs  svg_icons.rs  system_tray.rs  toolbar.rs  translation.rs  tray_example.rs  types.rs  utils.rs  window_detection.rs  winrt_settings_window.rs
src/config/: manager.rs  mod.rs
src/drawing/: cache.rs  elements.rs  history.rs  interaction.rs  mod.rs  rendering.rs  text_editing.rs  tools.rs  types.rs
src/interaction/: mod.rs
src/ocr/: engine.rs  manager.rs  mod.rs  types.rs
src/platform/: events.rs  mod.rs  traits.rs  traits_v2.rs
src/platform/windows/: d2d.rs  dxgi.rs  factory.rs  gdi.rs  handle_wrapper.rs  mod.rs  resources.rs  system.rs
src/rendering/: dirty_rect.rs  layer_cache.rs  mod.rs  render_list.rs
src/screenshot/: capture.rs  mod.rs  save.rs  selection.rs
src/settings/: core.rs  defaults.rs  manager.rs  mod.rs  window.rs
src/state/: editing.rs  idle.rs  mod.rs  processing.rs  selecting.rs  types.rs
src/system/: hotkeys.rs  mod.rs  ocr.rs  tray.rs  window_detection.rs
src/ui/: controls.rs  cursor.rs  dialogs.rs  mod.rs  overlay.rs  svg_icons.rs  toolbar.rs  types.rs
src/ui/preview/: drawing.rs  mod.rs  renderer.rs  types.rs  window.rs
src/utils/: command_helpers.rs  d2d_helpers.rs  image_processing.rs  interaction.rs  mod.rs  profiler.rs  svg.rs  win_api.rs
src_backup/: d2d.rs  drawing.rs  input.rs  lib.rs  main.rs  simple_settings.rs  toolbar.rs  types.rs
tests/: drawing_tests.rs
