[workspace]
resolver = "3"
members = [
  "apps/sc_windows",
  "crates/sc_host_windows",
  "crates/sc_host_protocol",
  "crates/sc_ocr",
  "crates/sc_ui_windows",
  "crates/sc_settings",
  "crates/sc_drawing",
  "crates/sc_drawing_host",
  "crates/sc_rendering",
  "crates/sc_highlight",
  "crates/sc_app",
  "crates/sc_ui",
  "crates/sc_platform",
  "crates/sc_platform_windows",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
opt-level = 1
