[workspace]
resolver = "3"
members = [
  "apps/sc_windows",
  "crates/sc_host_windows",
  "crates/sc_host_protocol",
  "crates/sc_ocr",
  "crates/sc_ui_windows",
  "crates/sc_settings",
  "crates/sc_drawing",
  "crates/sc_drawing_host",
  "crates/sc_rendering",
  "crates/sc_highlight",
  "crates/sc_app",
  "crates/sc_ui",
  "crates/sc_platform",
  "crates/sc_platform_windows",
]

[workspace.dependencies]
anyhow = "1.0.104"
criterion = { version = "0.8.2", features = ["html_reports"] }
embed-resource = "3.0.11"
image = "0.25.10"
ocr-rs = "2.3.3"
resvg = "0.47.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tiny-skia = "0.12.0"
usvg = "0.47.0"
windows = "0.62.2"
windows-numerics = "0.3.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
opt-level = 1
