[package]
name = "sc_platform_windows"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Windows platform implementation"

[dependencies]
sc_platform = { path = "../sc_platform" }
sc_rendering = { path = "../sc_rendering" }
sc_drawing = { path = "../sc_drawing" }
windows-numerics = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_UI_Controls",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
] }
