[package]
name = "sc_platform_windows"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Windows platform implementation"

[dependencies]
sc_platform = { path = "../sc_platform" }
sc_rendering = { path = "../sc_rendering" }
sc_drawing = { path = "../sc_drawing" }
windows-numerics = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
  "Foundation",
  "Graphics",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  "Win32_System_LibraryLoader",
  "Win32_Storage_Xps",
  "Win32_UI_Controls",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
] }
